2002-02-06  joe c  <marcus@marcuscom.com>
	* etc/afpd/globals.h, etc/afpd/afp_options.c, etc/afpd/status.c
	etc/afpd/volume.c: Add a new option -server_notif to specify that
	a server supports server notifications.  If this flag is not specified
	the client will poll the server every 10 seconds for directory changes.

2002-02-03  and m  <morgan@orst.edu>
	* bin/afppasswd/Makefile.am
	Added an install-exec-hook to make the afppasswd binary suid root
	after it is installed.  This lets local users change their afppasswd
	password.

2001-12-14  joe c   <marcus@marcuscom.com>
	* etc/afpd/afp_options.c, etc/afpd/afp_dsi.c, etc/afpd/globals.h:
	Add a new option to afpd called -timeout to specify the number of
	server tickles to send before killing a AFPoTCP session.

2001-12-10  joe c   <marcus@marcuscom.com>
	* bin/cnid/cnid_didname_verify,c: Add a utility to verify the consistency
	of didname.db.  Using the stock db_verify utility will fail as the sort
	routine is unknown.

2001-12-07  joe c   <marcus@marcuscom.com>
	* libatalk/cnid/cnid_open.c: Re-enable synchronous transaction support
	to try improve performance.

2001-12-04  joe c   <marcus@marcuscom.com>
	* etc/afpd/unix.c: Fix afpd sharing NFSv3 mounts (thanks to 
	Pierre Beyssac <beyssac@enst.fr>)

2001-12-03  joe c   <marcus@marcuscom.com>
	* etc/afpd/*.[ch]: Big commit to clean up code with astyle (readable code 
	is hackable code).  Also committed a fix to give CNID DB a shot in
	production use.

2001-11-27  joe c   <marcus@marcuscom.com>
	* configure.in: Removed the --with-cnid-db option, and added
	  --with-did=cnid for consistency

2001-11-19  pooba53 <bobo@bocklabs.wisc.edu>
    * Modified distrib/initscripts/Makefile.am so
      that SuSE init script ends up in the correct directory.

2001-11-19  pooba53 <bobo@bocklabs.wisc.edu>
	* modified config/AppleVolumes.default to not 
          have the "/Home Directory" text in it as this is not the
          proper way of allowing default Home directory access.
